<resources>
    <string name="app_name">NoBRainer2</string>
    <string name="app_settings">App Settings</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="languages">Languages</string>
    <string name="offline_mode_feature_in_dev_poe3">Offline mode feature in Dev POE3</string>
    <string name="user_manual">User Manual</string>
    <string name="logout">Logout</string>
    <string name="delete_quiz">Delete Quiz</string>
    <string name="next">Next</string>
    <string name="create_your_quiz">Create Your Quiz</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="enter_option_1">Enter option 1</string>
    <string name="enter_option_2">Enter option 2</string>
    <string name="enter_in_your_quiz_name">Enter in your Quiz name</string>
    <string name="enter_option_3">Enter option 3</string>
    <string name="enter_option_4">Enter option 4</string>
    <string name="correct_answer_1_4">Correct Answer (1-4)</string>
    <string name="next_question">Next Question</string>
    <string name="save_quiz">Save Quiz</string>
    <string name="play_snake_game">Play Snake Game</string>
    <string name="hi_deadpool">Hi, Deadpool</string>
    <string name="_2400">2400</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="other_games">Other Games</string>
    <string name="chat_ai">Chat AI</string>
    <string name="quiz_categories">Quiz Categories</string>
    <string name="science">Science</string>
    <string name="history">History</string>
    <string name="sport">Sport</string>
    <string name="my_quiz">My Quiz</string>
    <string name="general">General</string>
    <string name="question">Question</string>
    <string name="response">Response</string>
    <string name="enter_your_query">Enter your query</string>
    <string name="notification_title">Time to play</string>
    <string name="notification_text">Want to test your knowledge?</string>
    <string name="channel_name">NoBrainer Channel</string>
    <string name="channel_description">Notifications for NoBrainer quiz app</string>
</resources>