<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".ActivitySettings">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_settings"
        android:padding="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonEditUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00AAFF"
        android:text="@string/edit_user_profile"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread" />

    <Button
        android:id="@+id/buttonDarkMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00AAFF"
        android:text="@string/dark_mode"
        app:layout_constraintTop_toBottomOf="@id/buttonEditUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonLightMode"
        android:layout_width="0dp"
        android:backgroundTint="#00AAFF"
        android:layout_height="wrap_content"
        android:text="@string/light_mode"
        app:layout_constraintTop_toBottomOf="@id/buttonDarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonLanguages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:backgroundTint="#00AAFF"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/buttonLightMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textOfflineMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/offline_mode_feature_in_dev_poe3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLanguages" />

    <Button
        android:id="@+id/buttonUserManual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_manual"
        android:backgroundTint="#00AAFF"
        app:layout_constraintTop_toBottomOf="@id/textOfflineMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/buttonUserManual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="spread"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
